# tensile

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  PHASES.md  README.md  TENSILE_2_0_SPEC.md
migrations/: 001_initial_schema.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: mod.rs  parsers.rs
src/cli/commands/: action.rs  metrics.rs  mod.rs  pattern.rs  reality.rs  state.rs  vision.rs
src/cloud/: mod.rs  sync.rs
src/engine/: mod.rs  pattern.rs  state_machine.rs  tension.rs
src/models/: action.rs  mod.rs  reality.rs  user.rs  vision.rs
src/persistence/: mod.rs  ron_store.rs  sqlite_store.rs  traits.rs
src/tui/: app.rs  dashboard.rs  events.rs  mod.rs
