[package]
name = "tensile"
version = "0.1.0"
edition = "2021"
authors = ["Moritz Bierling"]
description = "A terminal-based cognitive prosthetic for structural dynamics"
repository = "https://github.com/yourusername/tensile"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tensile"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
thiserror = "1.0"
anyhow = "1.0"
prettytable-rs = "0.10"
colored = "2.1"
dirs = "5.0"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
